--- a/core/pom.xml
+++ b/core/pom.xml
@@ -9,17 +9,14 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>db</artifactId>
-    <name>db</name>
+    <name>core</name>
+    <artifactId>core</artifactId>
+    <packaging>jar</packaging>
 
     <dependencies>
         <dependency>
-            <groupId>com.google.cloud</groupId>
-            <artifactId>google-cloud-firestore</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.google.cloud</groupId>
-            <artifactId>google-cloud-core</artifactId>
+            <groupId>io.vavr</groupId>
+            <artifactId>vavr</artifactId>
         </dependency>
         <dependency>
             <groupId>com.google.cloud</groupId>
@@ -32,5 +29,4 @@
 
         </dependencies>
     </dependencyManagement>
-
 </project>
