Create multi app deployment to GAE

--- a/.gitignore
+++ b/.gitignore
@@ -163,4 +163,4 @@ HELP.md
 
 # End of https://www.toptal.com/developers/gitignore/api/java,maven,intellij
 
-findmeaps5-a670861c8d6a.json
+deploy/*
